Implemented requests for: Create, Update, PartialUpdate(Patch), Delete

--- a/appsettings.json
+++ b/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "CommanderConnection": "put your connection string here"
+    "CommanderConnection": "Data Source=INSPIRON\\SQLEXPRESS01;Initial Catalog=CommanderDB;Persist Security Info=True;User ID=CommanderAPI;Password=zaq1@WSX"
   }
 }
